FIX headline font-size on mobile

--- a/src/components/PortfolioItems/Portfolio.css
+++ b/src/components/PortfolioItems/Portfolio.css
@@ -67,6 +67,12 @@
   }
 }
 
+@media screen and (max-width:475px) {
+  .portfolio-box h2 {
+    font-size: 1.3em;
+  }
+}
+
 a.small-link, {
   z-index: 2;  
   font-size: 11px;  
